--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -47,6 +47,11 @@
   </div>
 
   <script>
+  fetch("/api/user")
+    .then(res => {
+      if (!res.ok) location.href = "/login.html";
+    });
+
     const tabInbox = document.getElementById("tab-inbox");
     const tabSent = document.getElementById("tab-sent");
     const messagesEl = document.getElementById("messages");
