--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>📩 תיבת הודעות</title>
   <link rel="stylesheet" href="/style.css" />
+  <input type="text" id="searchBox" placeholder="🔍 חפש הודעה..." oninput="searchMessages()" />
 
   <style>
     body { font-family: sans-serif; background: #f7f9fc; margin: 0; }
