--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -53,8 +53,8 @@
 
     <div id="messages"></div>
   </div>
-
   <script>
+    await fetch(`/mark-read?threadId=${threadId}`);
   fetch("/api/user")
     .then(res => {
       if (!res.ok) location.href = "/login.html";
