--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
         <a href="about.html"> <span>ℹ️</span> אודות</a>
       <a href="/tree.html"> <span>🧬</span> עץ המשפחה</a>
       <a href="/chat.html"> <span>🧑‍💻</span> צ'אט AI</a>
-      <a href="/inbox.html"> <span>📩 </span>הודעות</a>
+      <a href="/mailbox.html"> <span>📩 </span> תיבת ההודעות האישית</a>
       <<a href="/gallery.html"> <span>🖼️</span> גלריית תמונות</a>
       ><a href="/memorial.html"><span>🕯️</span> קיר זיכרון</a>
       <<a href="/timeline.html"><span>🗓️</span> ציר זמן</a>
